fix image on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -13,15 +13,14 @@ body {
 .titlebar {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Align text to the start for better control */
-    justify-content: flex-start; /* Ensure content is aligned at the top */
+    align-items: flex-start;  /* Align text to the start for better control */
+    justify-content: center;
     text-align: left;
-    width: 93%; /* Adjust this to match the width of your main content if different */
+    width: 93%;  /* Adjust this to match the width of your main content if different */
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px; /* Align these paddings to match other content */
+    padding-left: 15px;  /* Align these paddings to match other content */
     padding-right: 15px;
-    min-height: 200px; /* Optional: Ensures a minimum height for better layout control */
 }
 
 .text-container {
@@ -31,8 +30,8 @@ body {
 .text-container h1, .text-container h4 {
     margin: 0;
     padding: 10px;
-    word-break: break-all; /* Forces breaking of words at any character */
-    hyphens: auto; /* Allows hyphenation to aid in breaking words at appropriate spots */
+    word-break: break-all;  /* Forces breaking of words at any character */
+    hyphens: auto;  /* Allows hyphenation to aid in breaking words at appropriate spots */
 }
 
 .image-container img {
@@ -59,28 +58,18 @@ body {
     }
 }
 
-/* Enhanced settings for mobile responsiveness */
+/* Mobile-specific styles */
 @media (max-width: 767px) {
     #title_desktop {
         display: none;
     }
 
     #title_mobile, .text-container h4 {
-        font-size: 4.5vw;  /* Adjustable font size for space management */
-        line-height: 1.3;  /* Optimized line height for readability */
-    }
-
-    .titlebar {
-        min-height: 150px;  /* Set a minimum height to prevent too much shrinkage */
-        max-height: 30vh;  /* Set a maximum height as a percentage of the viewport height */
-        overflow: hidden;  /* Hide overflow to prevent pushing content */
-    }
-
-    .image-container {
-        max-height: 50px;  /* Limit the image height to maintain layout */
-        overflow: hidden;  /* Prevent image overflow */
+        font-size: 4.5vw; /* Smaller, more responsive font size for mobile */
+        line-height: 1.3; /* Improves readability */
     }
 }
+
 
 .highlight {
     color: var(--green) !important;
